--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css"> </head>
 
 <body>
+  <div>
     <header>
         <nav class="container">
             <div class="logo"><i class="fa fa-connectdevelop"></i> </div>
